--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,30 @@
 .size-img{
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
+    border-radius: 75px;
+}
+
+.one {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.link{
+    text-decoration: none;
+    color: white;
+    text-align: center;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    transition: all 0.25s;
+}
+
+.link:hover{
+    transform: translateY(-15px);
+    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+}
+
+.image{
+    width: 100%;
+    height: 680px;
+    border-radius: 20px;
 }
